--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
+<!-- Navigator -->
 <ul>
-  <li><a routerLink=""></a></li>
+  <li><a routerLink="">Home</a></li>
+  <li><a routerLink="about">About</a></li>
+
 </ul>
+
+<!-- To match component's selector -->
+<app-home></app-home>
 
 <router-outlet></router-outlet>
