--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  background: teal;
+  padding: 3em;
+  color: #fff;
+}
+
+ul {
+  list-style-type: nene;
+  margin: 0 0 2em 0;
+  padding: 0;
+}
+ul li{
+  display: inline;
+  margin-right: 30px;
+}
+ul li a {
+  font-size: 1.5em;
+}
+a {
+  color: #fff;
+  text-decoration: none;
+}
