--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,15 +3,21 @@
     <p> Add a bucket list item</p>
   </div>
   <div class = "col">
-    <p> Your bucket list</p>
+    <p> Your bucket list ({{ itemCount }})</p>
   </div>
 </div>
 <div class="container color-light">
   <div class = "col">
     <p class="sm"> Use this form below to add a new bucket list goal. What do you want to do with your life?</p>
     <form>
-      <input type='text' class="txt" name="item" placeholder="life goal..." />
-      <input type="submit" class="btn" value="Add Item" />
+<!-- Two way data binding:
+  component to html = {{ varName }}
+  html to component = [(ngModel)]="varName"
+-->
+      <input type='text' class="txt" name="item" placeholder="life goal.." [(ngModel)]="goalText" [value] = "goalText">
+
+<!-- Property Binding: value = "{{ btnText}}" -> [value] = "btnText" -->
+      <input type="submit" class="btn" [value]="btnText" (click)="addItem()">
     </form>
   </div>
   <div class = "col">
