event binidng & interpolation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,6 +21,8 @@
     </form>
   </div>
   <div class = "col">
-    <p class="life-container"> I want to learn French</p>
+    <p class="life-container" *ngFor="let goal of goals">
+      {{ goal }}
+    </p>
   </div>
 </div>
